remove optimizeLegibility, causes weird type bugs

--- a/scss/_elements.page.scss
+++ b/scss/_elements.page.scss
@@ -16,7 +16,6 @@ html {
 
 body {
     -webkit-font-smoothing: antialiased;
-    text-rendering: optimizelegibility;
     color: $alpha-text-color;
 }
 
